name:                tf-random-tests
version:             0.1.0.0
license:             Apache-2.0
license-file:        LICENSE
author:              Reid Draper
maintainer:          reiddraper@gmail.com
category:            Random NUmbers
build-type:          Simple
cabal-version:       >=1.10

executable tf-random-tests
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
                     , tf-random == 0.5.*
                     , bytestring == 0.10.*
  default-language:    Haskell2010
